chore(api-docs): some minor documentaion changes
