# food_db/docs/swagger.json
@@ -238,7 +238,7 @@
                     "200": {
                         "description": "Dish details",
                         "schema": {
-                            "$ref": "#/definitions/handlers.DishResponse"
+                            "$ref": "#/definitions/database.Dish"
                         }
                     },
                     "400": {
@@ -1316,50 +1316,10 @@
                 }
             }
         },
-        "dishes.DishResult": {
-            "type": "object",
-            "properties": {
-                "alt_name": {
-                    "type": "string"
-                },
-                "course": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "dish_id": {
-                    "type": "string"
-                },
-                "dish_name": {
-                    "type": "string"
-                }
-            }
-        },
         "echo.HTTPError": {
             "type": "object",
             "properties": {
                 "message": {}
-            }
-        },
-        "handlers.DishResponse": {
-            "type": "object",
-            "properties": {
-                "alt_name": {
-                    "type": "string"
-                },
-                "course": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "dish_id": {
-                    "type": "string"
-                },
-                "dish_name": {
-                    "type": "string"
-                }
             }
         },
         "handlers.EditUserResponse": {
@@ -1418,7 +1378,7 @@
                 "dishes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dishes.DishResult"
+                        "$ref": "#/definitions/database.Dish"
                     }
                 },
                 "limit": {
